[gd_scene load_steps=70 format=3 uid="uid://dvh4bkk5eayqc"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_s3qyg"]
[ext_resource type="Texture2D" uid="uid://bqf8260xvmxaj" path="res://Textures/Player/Player_asset/Sorcerer/sorcerer_death.png" id="1_td4w0"]
[ext_resource type="Texture2D" uid="uid://wgscm2qoiu7t" path="res://Textures/Player/Player_asset/Sorcerer/sorcerer_idle_attack.png" id="2_hkvjp"]
[ext_resource type="Texture2D" uid="uid://bywnktria3npb" path="res://Textures/Player/Player_asset/Sorcerer/sorcerer_idle.png" id="2_ufvkt"]
[ext_resource type="Texture2D" uid="uid://cfxvun1jdfcdv" path="res://Textures/Player/Player_asset/Sorcerer/sorcerer-attack-frames.png" id="3_8ypy2"]
[ext_resource type="Texture2D" uid="uid://58w21e57supw" path="res://Textures/Player/Player_asset/Sorcerer/sorcerer.png" id="3_f61be"]
[ext_resource type="Texture2D" uid="uid://bf11bka4bpp5u" path="res://Textures/Player/Player_asset/Sorcerer/sorcerer-attack-frames-right.png" id="4_6536n"]
[ext_resource type="Texture2D" uid="uid://dajscctq6fwpr" path="res://Textures/Player/Player_asset/Sorcerer/sorcerer_right.png" id="4_bp0di"]
[ext_resource type="PackedScene" uid="uid://42qup1p37ood" path="res://scenes/hurt_box.tscn" id="6_8cr3o"]
[ext_resource type="Script" path="res://scripts/GUI.gd" id="10_l1y7j"]
[ext_resource type="Texture2D" uid="uid://bl4tl3ngd77yg" path="res://Textures/GUI/XP-Bar/xp-empty.png" id="11_nv3yf"]
[ext_resource type="FontFile" uid="uid://djaf2ki6u5wo" path="res://Textures/GUI/Text-Fonts/Caramel-Regular.otf" id="12_8ik0c"]
[ext_resource type="Texture2D" uid="uid://cdswytaia5s5s" path="res://Textures/GUI/XP-Bar/xp.png" id="12_qo08q"]
[ext_resource type="FontFile" uid="uid://bcrlkl78tdw67" path="res://Textures/GUI/Text-Fonts/Keep Cheese.otf" id="13_3etru"]
[ext_resource type="Texture2D" uid="uid://ccrigfmjk0hd1" path="res://Textures/GUI/HP-Bar/hpbar.png" id="13_6palf"]
[ext_resource type="Texture2D" uid="uid://ca8u51kh47bq8" path="res://Textures/GUI/HP-Bar/hpline.png" id="14_bknss"]
[ext_resource type="PackedScene" uid="uid://dckqrbgrjon88" path="res://scenes/basic_button.tscn" id="15_gd1hx"]
[ext_resource type="Theme" uid="uid://hx71mn4je0ka" path="res://Textures/Themes/upgrade-menu.tres" id="16_r2hlk"]
[ext_resource type="AudioStream" uid="uid://cuicqg7a4afqu" path="res://Audio/Level Up_.WAV" id="18_6hu3u"]
[ext_resource type="AudioStream" uid="uid://e5je2wqb3ow1" path="res://Audio/win.wav" id="18_gxesm"]
[ext_resource type="AudioStream" uid="uid://ci0yh8puljjyw" path="res://Audio/game-over.WAV" id="18_swnpd"]
[ext_resource type="Theme" uid="uid://o1e7aarsxr6x" path="res://Textures/Themes/BasicButton.tres" id="19_fllf1"]
[ext_resource type="PackedScene" uid="uid://okd1vduvsily" path="res://scenes/options_menu.tscn" id="21_c3yk7"]
[ext_resource type="PackedScene" uid="uid://cx2rqswhx080n" path="res://scenes/fov.tscn" id="24_jdd2v"]

[sub_resource type="AtlasTexture" id="AtlasTexture_hgun4"]
atlas = ExtResource("2_hkvjp")
region = Rect2(80, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_7kbbk"]
atlas = ExtResource("2_hkvjp")
region = Rect2(0, 40, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_alube"]
atlas = ExtResource("2_hkvjp")
region = Rect2(40, 40, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_54v21"]
atlas = ExtResource("2_hkvjp")
region = Rect2(80, 40, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_kq7ry"]
atlas = ExtResource("3_8ypy2")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qq2aj"]
atlas = ExtResource("3_8ypy2")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6bvq1"]
atlas = ExtResource("3_8ypy2")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hirqa"]
atlas = ExtResource("3_8ypy2")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ypohi"]
atlas = ExtResource("4_6536n")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qlkxl"]
atlas = ExtResource("4_6536n")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q7teu"]
atlas = ExtResource("4_6536n")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jgaah"]
atlas = ExtResource("4_6536n")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2m6iu"]
atlas = ExtResource("1_td4w0")
region = Rect2(0, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_kq8ej"]
atlas = ExtResource("1_td4w0")
region = Rect2(40, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_1yf5r"]
atlas = ExtResource("1_td4w0")
region = Rect2(80, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2tbl"]
atlas = ExtResource("1_td4w0")
region = Rect2(0, 40, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_ynf5b"]
atlas = ExtResource("1_td4w0")
region = Rect2(40, 40, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_sc58l"]
atlas = ExtResource("1_td4w0")
region = Rect2(80, 40, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_ayjep"]
atlas = ExtResource("1_td4w0")
region = Rect2(0, 80, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_k3f6m"]
atlas = ExtResource("1_td4w0")
region = Rect2(40, 80, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_lfrv6"]
atlas = ExtResource("1_td4w0")
region = Rect2(80, 80, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_4drbf"]
atlas = ExtResource("2_ufvkt")
region = Rect2(0, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_44ds2"]
atlas = ExtResource("2_ufvkt")
region = Rect2(40, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_kax3i"]
atlas = ExtResource("2_ufvkt")
region = Rect2(80, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_lch8a"]
atlas = ExtResource("2_ufvkt")
region = Rect2(0, 40, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_4quh1"]
atlas = ExtResource("2_ufvkt")
region = Rect2(40, 40, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_130y5"]
atlas = ExtResource("2_ufvkt")
region = Rect2(80, 40, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_q7arx"]
atlas = ExtResource("2_ufvkt")
region = Rect2(0, 80, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_vewnc"]
atlas = ExtResource("2_ufvkt")
region = Rect2(40, 80, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ksmj"]
atlas = ExtResource("2_ufvkt")
region = Rect2(80, 80, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_gttwl"]
atlas = ExtResource("2_ufvkt")
region = Rect2(0, 120, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_ufvxn"]
atlas = ExtResource("3_f61be")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hii11"]
atlas = ExtResource("3_f61be")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wo8r5"]
atlas = ExtResource("3_f61be")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8dp23"]
atlas = ExtResource("3_f61be")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_evt6n"]
atlas = ExtResource("4_bp0di")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rttph"]
atlas = ExtResource("4_bp0di")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_furji"]
atlas = ExtResource("4_bp0di")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vdomu"]
atlas = ExtResource("4_bp0di")
region = Rect2(96, 64, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_njxlq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hgun4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7kbbk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_alube")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_54v21")
}],
"loop": true,
"name": &"attack_idle",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kq7ry")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qq2aj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6bvq1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hirqa")
}],
"loop": true,
"name": &"attack_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ypohi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qlkxl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q7teu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jgaah")
}],
"loop": true,
"name": &"attack_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2m6iu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kq8ej")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1yf5r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2tbl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ynf5b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sc58l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ayjep")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k3f6m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lfrv6")
}],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4drbf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_44ds2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kax3i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lch8a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4quh1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_130y5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q7arx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vewnc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ksmj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gttwl")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ufvxn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hii11")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wo8r5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8dp23")
}],
"loop": true,
"name": &"move_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_evt6n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rttph")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_furji")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vdomu")
}],
"loop": true,
"name": &"move_right",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_xp8a3"]
radius = 4.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_fgef5"]
radius = 6.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ommxg"]
radius = 367.909

[sub_resource type="CircleShape2D" id="CircleShape2D_7203n"]
radius = 50.0

[sub_resource type="CircleShape2D" id="CircleShape2D_fvuf4"]

[node name="Player" type="CharacterBody2D" groups=["player"]]
position = Vector2(0.112946, 0.034647)
script = ExtResource("1_s3qyg")
metadata/_edit_vertical_guides_ = [158.0, 370.0]
metadata/_edit_horizontal_guides_ = [85.0, 270.0]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_njxlq")
animation = &"death"

[node name="Body" type="CollisionShape2D" parent="."]
position = Vector2(-1, 1)
shape = SubResource("CapsuleShape2D_xp8a3")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="HurtBox" parent="." instance=ExtResource("6_8cr3o")]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2(-1.11295, 0.965353)
shape = SubResource("CapsuleShape2D_fgef5")

[node name="Attack" type="Node" parent="."]

[node name="FireBallTimer" type="Timer" parent="Attack"]
unique_name_in_owner = true
wait_time = 1.5
autostart = true

[node name="FireBallAttackTimer" type="Timer" parent="Attack/FireBallTimer"]
unique_name_in_owner = true
wait_time = 0.075

[node name="NebulaTimer" type="Timer" parent="Attack"]
unique_name_in_owner = true
wait_time = 3.0
autostart = true

[node name="NebulaAttackTimer" type="Timer" parent="Attack/NebulaTimer"]
unique_name_in_owner = true
wait_time = 0.075
autostart = true

[node name="StaffBase" type="Node2D" parent="Attack"]
unique_name_in_owner = true

[node name="EnemyDetectionArea" type="Area2D" parent="."]
light_mask = 4
visibility_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetectionArea"]
shape = SubResource("CircleShape2D_ommxg")

[node name="GrabArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="GrabArea"]
shape = SubResource("CircleShape2D_7203n")

[node name="CollectArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollectArea"]
shape = SubResource("CircleShape2D_fvuf4")

[node name="GUILayer" type="CanvasLayer" parent="."]

[node name="GUI" type="Control" parent="GUILayer"]
layout_mode = 3
anchors_preset = 0
offset_left = 47.0
offset_top = 5.0
offset_right = 687.0
offset_bottom = 365.0
script = ExtResource("10_l1y7j")

[node name="ExperienceBar" type="TextureProgressBar" parent="GUILayer/GUI"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 567.0
offset_bottom = 24.0
texture_under = ExtResource("11_nv3yf")
texture_progress = ExtResource("12_qo08q")
texture_progress_offset = Vector2(2, 2)

[node name="label_level" type="Label" parent="GUILayer/GUI/ExperienceBar"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 223.0
offset_top = 3.0
offset_right = 324.0
offset_bottom = 25.0
theme_override_fonts/font = ExtResource("12_8ik0c")
theme_override_font_sizes/font_size = 24
text = "Level : 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HealthBar" type="TextureProgressBar" parent="GUILayer/GUI"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 261.0
offset_top = 157.0
offset_right = 413.0
offset_bottom = 178.0
scale = Vector2(0.15, 0.15)
value = 100.0
texture_under = ExtResource("13_6palf")
texture_progress = ExtResource("14_bknss")
texture_progress_offset = Vector2(23.975, 5.035)

[node name="LevelUp" type="Panel" parent="GUILayer/GUI"]
unique_name_in_owner = true
process_mode = 2
visible = false
layout_mode = 0
offset_left = 169.0
offset_top = 50.0
offset_right = 378.0
offset_bottom = 300.0
theme = ExtResource("16_r2hlk")

[node name="label_LevelUP" type="Label" parent="GUILayer/GUI/LevelUp"]
layout_mode = 0
offset_left = 5.0
offset_top = 5.0
offset_right = 205.0
offset_bottom = 55.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("13_3etru")
text = "Congrats, You Leveled Up!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="UpgradeOptions" type="VBoxContainer" parent="GUILayer/GUI/LevelUp"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 10.0
offset_top = 50.0
offset_right = 190.0
offset_bottom = 100.0

[node name="snd_levelup" type="AudioStreamPlayer" parent="GUILayer/GUI/LevelUp"]
unique_name_in_owner = true
stream = ExtResource("18_6hu3u")
volume_db = -40.0
pitch_scale = 1.25
bus = &"Sfx"

[node name="DeathPanel" type="Panel" parent="GUILayer/GUI"]
unique_name_in_owner = true
process_mode = 2
visible = false
layout_mode = 0
offset_left = 397.0
offset_top = 51.0
offset_right = 597.0
offset_bottom = 301.0
theme = ExtResource("16_r2hlk")

[node name="label_Result" type="Label" parent="GUILayer/GUI/DeathPanel"]
unique_name_in_owner = true
layout_mode = 0
offset_top = 4.0
offset_right = 200.0
offset_bottom = 54.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("13_3etru")
text = "Result"
horizontal_alignment = 1
vertical_alignment = 1

[node name="snd_victory" type="AudioStreamPlayer" parent="GUILayer/GUI/DeathPanel"]
unique_name_in_owner = true
stream = ExtResource("18_gxesm")
volume_db = -20.0
bus = &"Sfx"

[node name="snd_lose" type="AudioStreamPlayer" parent="GUILayer/GUI/DeathPanel"]
unique_name_in_owner = true
stream = ExtResource("18_swnpd")
volume_db = -30.0
bus = &"Sfx"

[node name="btn_menu" parent="GUILayer/GUI/DeathPanel" instance=ExtResource("15_gd1hx")]
layout_mode = 1
anchors_preset = -1
anchor_bottom = 0.016
offset_left = 50.0
offset_top = 199.0
offset_right = 147.0
offset_bottom = 225.0
theme = ExtResource("19_fllf1")
theme_override_font_sizes/font_size = 17
text = "Main Menu"

[node name="label_Timer" type="Label" parent="GUILayer/GUI"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 524.0
offset_top = 30.0
offset_right = 604.0
offset_bottom = 54.0
theme_override_fonts/font = ExtResource("12_8ik0c")
theme_override_font_sizes/font_size = 20
text = "00:00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="OptionsMenu" parent="GUILayer" instance=ExtResource("21_c3yk7")]
visible = false
offset_left = 0.112946
offset_top = 0.034647
offset_right = 0.112976
offset_bottom = 0.0346375

[node name="Vision" type="CanvasLayer" parent="."]
layer = 0

[node name="ColorRect" type="ColorRect" parent="Vision"]
light_mask = 14
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.454902)

[node name="FOV" parent="." instance=ExtResource("24_jdd2v")]
unique_name_in_owner = true
color = Color(0.485703, 0.485704, 0.485703, 1)
energy = 3.1

[connection signal="hurt" from="HurtBox" to="." method="_on_hurt_box_hurt"]
[connection signal="timeout" from="Attack/FireBallTimer" to="." method="_on_fire_ball_timer_timeout"]
[connection signal="timeout" from="Attack/FireBallTimer/FireBallAttackTimer" to="." method="_on_fire_ball_attack_timer_timeout"]
[connection signal="timeout" from="Attack/NebulaTimer" to="." method="_on_nebula_timer_timeout"]
[connection signal="timeout" from="Attack/NebulaTimer/NebulaAttackTimer" to="." method="_on_nebula_attack_timer_timeout"]
[connection signal="body_entered" from="EnemyDetectionArea" to="." method="_on_enemy_detection_area_body_entered"]
[connection signal="body_exited" from="EnemyDetectionArea" to="." method="_on_enemy_detection_area_body_exited"]
[connection signal="area_entered" from="GrabArea" to="." method="_on_grab_area_area_entered"]
[connection signal="area_entered" from="CollectArea" to="." method="_on_collect_area_area_entered"]
[connection signal="click_end" from="GUILayer/GUI/DeathPanel/btn_menu" to="." method="_on_btn_menu_click_end"]
[connection signal="pressed" from="GUILayer/GUI/DeathPanel/btn_menu" to="." method="_on_btn_menu_pressed"]

[editable path="HurtBox"]
